# Corpora

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
analyser/: .gitignore  Cargo.toml  analyse.py  analyse_old.py  english_recipe.json  pyproject.toml  temp.json
analyser/analyser-cli/: Cargo.toml
analyser/analyser-cli/src/: _objects.rs  analyse.rs  crypt.rs  http.rs  io.rs  main.rs  occurance.rs  transforms.rs  utils.rs
analyser/analyser-cli/src/cli/: analyse.rs  export.rs  fetch.rs  mod.rs  report.rs
analyser/analyser-cli/src/objects/: analysis.rs  export.rs  mod.rs  report.rs
analyser/analyser-lib/: Cargo.toml
analyser/corpora/: .gitignore
analyser/corpora/recipe/: english.json  jk_mix.json
analyser/python/analyser/: __init__.py
analyser/src/: analyse.rs  error.rs  io.rs  lib.rs  objects.rs  python.rs
analyser_python/: __init__.py  analyse.py  schema.py
