[tool.poetry]
name = "analyser"
version = "0.1.0"
description = ""
authors = ["Jeppe Klitgaard <hi@jeppe.science>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
twarc = "^2.14.0"
pydantic = "^2.3.0"
semver = "^3.0.1"
tqdm = "^4.66.1"
joblib = "^1.3.2"
pqdm = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
