[package]
name = "analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "analyser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["indexmap", "eyre"] }

counter = "0.5.7"
itertools = "0.11.0"
iterwindows = "0.3.0"

rayon = "1.7.0"
indicatif = { version = "0.17.6", features = ["rayon"] }
const_for = "0.1.2"
seq-macro = "0.3.5"

tar = "0.4.40"
flate2 = "1.0.27"

unicode-segmentation = "1.10.1"
serde = { version = "1.0.188", features = ["derive"] }
derive_more = "0.99.17"
indexmap = { version = "2.0.0", features = ["rayon"] }
sliding_windows = "3.0.0"
thiserror = "1.0.48"
eyre = { version = "0.6.8", features = ["pyo3"] }
