[tool.poetry]
name = "analyser"
version = "0.1.0"
description = ""
authors = ["Jeppe Klitgaard <hi@jeppe.science>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
twarc = "^2.14.0"
pydantic = "^2.3.0"
semver = "^3.0.1"
tqdm = "^4.66.1"
joblib = "^1.3.2"
pqdm = "^0.2.0"

[project]
name = "analyser"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"
