[package]
name = "analyser-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.4", features = ["derive", "string"] }
counter = { version = "0.6.0", features = ["serde"] }
data-encoding = "2.4.0"
delegate = "0.10.0"
derive_more = "0.99.17"
eyre = "0.6.8"
flate2 = "1.0.27"
humantime = "2.1.0"
indexmap = { version = "2.0.0", features = ["rayon", "serde"] }
indicatif = "0.17.6"
itertools = "0.11.0"
linya = "0.3.0"
mime = "0.3.17"
num-traits = "0.2.16"
rayon = "1.7.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
ring = "0.16.20"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
smartstring = { version = "1.0.1", features = ["serde"] }
tar = "0.4.40"
the-newtype = "0.1.1"
unicode-segmentation = "1.10.1"
url = { version = "2.4.1", features = ["serde"] }
